tests/snapshots/parse__typedef_pointer.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  TypedefDef(intptr)\n  Function(main)\n\n"
stderr: ""
status: 0
