tests/snapshots/parse__typedef_simple.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  TypedefDef(myint)\n  Function(main)\n\n"
stderr: ""
status: 0
