tests/snapshots/parse__typedef_ulong.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  TypedefDef(size_t)\n  Function(main)\n\n"
stderr: ""
status: 0
