tests/snapshots/parse__union.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  UnionDef(Data)\n  Function(main)\n\n"
stderr: ""
status: 0
