tests/snapshots/parse__union_designated_init.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  UnionDef(Value)\n  Function(main)\n\n"
stderr: ""
status: 0
