tests/snapshots/parse__variadic_simple.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(sum_ints)\n  Function(main)\n\n"
stderr: ""
status: 0
