tests/snapshots/parse__void_function.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(counter)\n  Function(increment_counter)\n  Function(main)\n\n"
stderr: ""
status: 0
