tests/snapshots/parse__wide_literals.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  TypedefDef(wchar_t)\n  Function(main)\n\n"
stderr: ""
status: 0
